# signal-take-home

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: main.rs
