[package]
name = "signal-take-home"
version = "0.1.0"
authors = ["Daniel Porteous <danielporteous1@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8.3"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
log = "0.4.0"
structopt = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
